# rilproxy

./: Android.mk  CMakeLists.txt  README.md  README.org  android_env.sh
patches/: char_array_output.patch  rild2_socket_rename.patch
scripts/: android_env.sh
src/: audio.cpp  b2g-dialer-daemon.c  b2g-dialer-forward.cpp  dialer.py  main.c  main.cpp  rilproxy.c
src/audio/: audio.cpp
